# Comparitive-Analyst-Agent

./: .gitignore  Architecture.md  Challanges_encountered.md  README.md  challanges_encountered.md  clean_analysis_results.csv  pyproject.toml  requirements.txt
data/txt_files_L_test/: doc1_L  doc2_L
data/txt_files_med_test/: report1_L.txt
src/: agent.py  app.py  database.py  ingest_worker.py  ingestion.py  main.py
src/data/txt_files_med_test/: report2_L.txt  report3_L.txt
src/data/txt_files_test/: apple_test.txt  tesla_test.txt
test_chroma_db/: chroma.sqlite3
tests/: test_RAG.py
tests/test_chroma_db_isolated/: chroma.sqlite3
